--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-Flask==2.2.5
-pyTelegramBotAPI==4.12.0
-aiohttp==3.9.3
-requests==2.31.0
+telebot
+aiohttp
+flask
+python-dotenv
+requests
+pyTelegramBotAPI
+
